--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -26,7 +26,7 @@ Resources:
         Sequence: 1
         StackUrl: !Ref StackUrl
         Stage: !Ref Stage
-      TemplateURL: !Sub ${StackUrl}/templates/vpc/cloudformation.yaml
+      TemplateURL: !Sub ${StackUrl}/vpc/cloudformation.yaml
 
   #Ec2 Image Builder
   Ec2ImageBuilderSubStack:
