--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -2,6 +2,36 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
 
+  BuildDefaultVpc:
+    AllowedValues:
+      - false
+      - true
+    Default: true
+    Type: String
+
+  DefaultVpcAvailabilityZoneCount:
+    Default: 2
+    Type: String
+
+  DefaultVpcCidrClassB:
+    Default: 1
+    Type: String
+
+  DefaultVpcCreateNatGateways:
+    AllowedValues:
+      - false
+      - true
+    Default: true
+    Type: String
+
+  DefaultVpcSequence:
+    Default: 1
+    Type: String
+
+  DefaltVpcNamespace:
+    Default: foundation
+    Type: String
+
   StackUrl:
     Type: String
 
@@ -10,7 +40,9 @@ Parameters:
 
 #Mappings:
 
-#Conditions:
+Conditions:
+
+  ShouldBuildDefaultVpc: !Equals [ !Ref BuildDefaultVpc, true ]
 
 Resources:
 
@@ -24,7 +56,7 @@ Resources:
         VpcId: !GetAtt ImageBuilderVpcSubStack.Outputs.VpcId
       TemplateURL: !Sub ${StackUrl}/ec2-image-builder/cloudformation.yaml
 
-  #Vpc
+  #Image Builder Vpc
   ImageBuilderVpcSubStack:
     Type: AWS::CloudFormation::Stack
     Properties:
@@ -34,6 +66,21 @@ Resources:
         CreateNatGateways: false
         Name: foundation
         Sequence: 1
+        StackUrl: !Ref StackUrl
+        Stage: !Ref Stage
+      TemplateURL: !Sub ${StackUrl}/vpc/cloudformation.yaml
+
+  #DefaultVpc
+  DefaultVpcSubStack:
+    Condition: ShouldBuildDefaultVpc
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        AvailabilityZoneCount: !Ref DefaultVpcAvailabilityZoneCount
+        CidrClassB: !Ref DefaultVpcCidrClassB
+        CreateNatGateways: !Ref DefaultVpcCreateNatGateways
+        Name: !Ref DefaltVpcNamespace
+        Sequence: !Ref DefaultVpcSequence
         StackUrl: !Ref StackUrl
         Stage: !Ref Stage
       TemplateURL: !Sub ${StackUrl}/vpc/cloudformation.yaml
