--- a/vpc/cloudformation.yaml
+++ b/vpc/cloudformation.yaml
@@ -53,11 +53,8 @@ Parameters:
     Default: none
     Type: String
 
-  PublicHostedZoneIsApex:
-    AllowedValues:
-      - true
-      - false
-    Default: true
+  PublicHostedZoneId:
+    Default: none
     Type: String
 
   Sequence:
@@ -90,7 +87,6 @@ Conditions:
   HasBastionKeyName: !Not [ !Equals [ !Ref BastionKeyName, none ] ]
   HasDomain: !Not [ !Equals [ !Ref Domain, none ] ]
   HasNatKeyName: !Not [ !Equals [ !Ref NatKeyName, none ] ]
-  PublicHostedZoneIsApex: !Equals [ !Ref PublicHostedZoneIsApex, true ]
 
 Resources:
 
@@ -101,7 +97,7 @@ Resources:
       Parameters:
         AmiId: !Ref BastionAmiId
         DomainName: !If [ HasDomain, !Sub 'bastion.${Name}-${Stage}.${Domain}', none ]
-        HostedZoneId: !If [ HasDomain, !GetAtt PublicHostedZone.Outputs.HostedZoneId, none ]
+        HostedZoneId: !Ref PublicHostedZoneId
         InstanceType: !Ref BastionInstanceType
         KeyName: !If [ HasBastionKeyName, !Ref BastionKeyName, !Ref 'AWS::NoValue' ]
         Stage: !Ref Stage
@@ -111,24 +107,14 @@ Resources:
       TemplateURL: !Sub ${StackUrl}/vpc/bastion.yaml
 
   PrivateHostedZone:
-    Type: AWS::CloudFormation::Stack
-    Condition: HasDomain
+    Type: AWS::Route53::HostedZone
     Properties:
-      Parameters:
-        Domain: !Sub internal.${Name}-${Stage}.${Domain}
-        VpcId: !GetAtt VpcSubStack.Outputs.VpcId
-      TemplateURL: !Sub ${StackUrl}/vpc/hosted-zone.yaml
-
-  PublicHostedZone:
-    Type: AWS::CloudFormation::Stack
-    Condition: HasDomain
-    Properties:
-      Parameters:
-        Domain: !If
-          - PublicHostedZoneIsApex
-          - !Ref Domain
-          - !Sub ${Name}-${Stage}.${Domain}
-      TemplateURL: !Sub ${StackUrl}/vpc/hosted-zone.yaml
+      HostedZoneConfig:
+        Comment: !Sub internal.${Name}-${Stage}.${Domain}
+      Name: !Sub internal.${Name}-${Stage}.${Domain}
+      VPCs:
+        - VPCId: !GetAtt VpcSubStack.Outputs.VpcId
+          VPCRegion: !Ref 'AWS::Region'
 
   SubnetANatInstance:
     Condition: CreateNatInstanceA
