--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -24,6 +24,10 @@ Parameters:
     Default: true
     Type: String
 
+  DefaultVpcNatInstanceAmiId:
+    Default: none
+    Type: String
+
   DefaultVpcSequence:
     Default: 1
     Type: String
